# soundvis

./: .gitlab-ci.yml  Cargo.toml  LICENSE  build.rs  default.glslf  default.glslv  shell.nix
proto/: spectrum.proto
src/: beat.rs  bench.rs  debug.rs  decoder.rs  gst.rs  lightsd.rs  main.rs  process.rs  simple_decoder.rs  visual.rs
